--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </a> 
             <ul class="main-information-list list">
                 <li class="main-information-item"> 
-                <a class="main-information-link link"
+                <a class="main-information-link current link"
                 href="./index.html">Студия</a> 
             </li>
             <li class="main-information-item">
@@ -153,7 +153,7 @@
     <footer class="footer">
         <a class="logo link" 
         href="./index.html" lang="en">
-            <span class="logo-first-part">Web</span><span class=".logo-second-part-theme-dark">Studio</span>
+            <span class="logo-first-part">Web</span><span class="logo-second-part-theme-dark">Studio</span>
         </a>
       <address class="address"> 
           <ul class="contact-info-list list">
