--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                     <a class="main-information-link link" href="./index.html">Студия</a>
                 </li>
                 <li class="main-information-item">
-                    <a class="main-information-link link" href="./portfolio.html">Портфолио</a>
+                    <a class="main-information-link current link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="main-information-item">
                     <a class="main-information-link link" href="">Контакты</a>
@@ -41,9 +41,10 @@
         </ul>
     </header>
     <main>
-        <!-- MENU -->
-        <section class="menu">
-            <h2 hidden>Меню</h2>
+        <!-- PORTFOLIO -->
+        <section class="Portfolio">
+            <h1 hidden>Портфолио</h1>
+            <div class="menu-portfolio">
             <ul class="list menu-list">
                 <li>
                     <button class="menu-item-btn" type="button">Все</button>
@@ -60,10 +61,8 @@
                     <button class="menu-item-btn" type="button">Маркетинг</button>
                 </li>
             </ul>
-        </section>
-        <!-- PROJECTS -->
-        <section class="projects">
-            <h2 hidden>Наши проекты</h2>
+            </div>
+            <div class="projects">
             <ul class="projects-list list">
                 <li class="projects-item">
                     <img
@@ -72,7 +71,7 @@
                     alt="открытый веб-сайт на ноутбуке"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Технокряк</h3>
+                    <h2 class="project-name">Технокряк</h2>
                     <p class="project-type">Веб-сайт</p>
                 </li>
                 <li class="projects-item">
@@ -82,7 +81,7 @@
                     alt="два баскетболиста играют"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                    <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                     <p class="project-type">Дизайн</p>
                 </li>
                 <li class="projects-item">
@@ -92,7 +91,7 @@
                     alt="эмблема ресторана Seafood"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Ресторан Seafood</h3>
+                    <h2 class="project-name">Ресторан Seafood</h2>
                     <p class="project-type">Приложение</p>
                 </li>
                 <li class="projects-item">
@@ -102,7 +101,7 @@
                     alt="наушники"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Проект Prime</h3>
+                    <h2 class="project-name">Проект Prime</h2>
                     <p class="project-type">Маркетинг</p>
                 </li>
                 <li class="projects-item">
@@ -112,7 +111,7 @@
                     alt="две коробки"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Проект Boxes</h3>
+                    <h2 class="project-name">Проект Boxes</h2>
                     <p class="project-type">Приложение</p>
                 </li>
                 <li class="projects-item">
@@ -122,7 +121,7 @@
                     alt="открытый веб-сайт на мониторе"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Inspiration has no Borders</h3>
+                    <h2 class="project-name">Inspiration has no Borders</h2>
                     <p class="project-type">Веб-сайт</p>
                 </li>
                 <li class="projects-item">
@@ -132,7 +131,7 @@
                     alt="разворот журнала"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Издание Limited Edition</h3>
+                    <h2 class="project-name">Издание Limited Edition</h2>
                     <p class="project-type">Дизайн</p>
                 </li>
                 <li class="projects-item">
@@ -142,7 +141,7 @@
                     alt="этикетка"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Проект LAB</h3>
+                    <h2 class="project-name">Проект LAB</h2>
                     <p class="project-type">Маркетинг</p>
                 </li>
                 <li class="projects-item">
@@ -152,16 +151,17 @@
                     alt="открытое приложение на ноутбуке"
                     width="370"
                     height="294">
-                    <h3 class="project-name">Growing Business</h3>
+                    <h2 class="project-name">Growing Business</h2>
                     <p class="project-type">Приложение</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
         <a class="logo link" href="./index.html" lang="en">
-            <span class="logo-first-part">Web</span><span class=".logo-second-part-theme-dark">Studio</span>
+            <span class="logo-first-part">Web</span><span class="logo-second-part-theme-dark">Studio</span>
         </a>
         <address class="address">
             <ul class="contact-info-list list">
